bugfix: click event not firing when H1 visible

--- a/front.css
+++ b/front.css
@@ -6,11 +6,17 @@ body
 
 	font-size:0.8em;
 	font-family: 'Roboto', sans-serif;
+	
+	width:100%;
+	height:100%;
 }
 
 h1
 {
-	z-index:1;
+	opacity:0.5;
+	color:white;
+	font-size:15em;
+	float:left;
 }
 
 footer
